# cred-check

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml  README.md
api/migrations/: 20210128135306_schema.sql
api/scripts/: run.sh  test.sh
api/src/: context.rs  database.rs  error.rs  lib.rs  main.rs  route.rs
api/src/filter/: mod.rs  opinion.rs  source.rs  supporter.rs  user.rs
api/src/handler/: auth.rs  mod.rs  opinion.rs  source.rs  supporter.rs  user.rs  vote.rs
api/src/model/: mod.rs  opinion.rs  source.rs  supporter.rs  user.rs  vote.rs
api/src/parser/: mod.rs
api/tests/: auth.rs  opinion.rs  source.rs  supporter.rs  user.rs  vote.rs
api/tests/migrations/: 20210218070444_seed.sql
api/tests/snapshots/: opinion__create.snap  source__create.snap  source__find.snap  supporter__create.snap  user__create.snap  user__find.snap  vote__create.snap
api/tests/tools/: mod.rs
doc/: design.md  todo.md
mwt/: Cargo.toml
mwt/src/: decoder.rs  encoder.rs  lib.rs
mwt/tests/: tests.rs
ui/: README.md  tsconfig.json
ui/public/: index.html  main.css
ui/scripts/: build.sh  serve.sh  watch.sh
ui/src/: api.ts  deps.ts  history.ts  main.tsx  root.tsx
ui/src/components/: link.tsx  loginForm.tsx  nav.tsx  opinion.tsx  opinionForm.tsx  opinions.tsx  search.tsx  signupForm.tsx  source.tsx
ui/src/context/: session.tsx  token.tsx
ui/src/screens/: auth.tsx  router.tsx  view.tsx
