[package]
name = "api"
version = "0.1.0"
authors = ["Joel Shepherd <joel@swivid.ink>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["postgres", "macros", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"

[dev-dependencies]
insta = "1.5"
