[package]
name = "api"
version = "0.1.0"
authors = ["Joel Shepherd <joel@swivid.ink>"]
edition = "2018"

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
mwt = { path = "../mwt" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["postgres", "macros", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
validator = { version = "0.12", features = ["derive"] }
warp = "0.3"
webpage = "1.2"

[dev-dependencies]
insta = "1.5"
