[package]
name = "mwt"
version = "0.1.0"
authors = ["Joel Shepherd <joel@swivid.ink>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
orion = "0.15"
